--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Generate coverage report
         run: |
-          cd ghess; go test `go list ./... | grep -v examples` -coverprofile=coverage.txt -covermode=atomic
+          cd ghess; go test `go list ./... | grep -v examples` -coverprofile=../coverage.txt -covermode=atomic
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v1.0.2
